# Library-Management

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/models/: Asset.cpp  Asset.h  Book.cpp  Book.h  ILendable.h  User.cpp  User.h
src/persistence/: AssetRepository.cpp  AssetRepository.h  BookRepository.cpp  BookRepository.h  DatabaseManager.cpp  DatabaseManager.h  UserRepository.cpp  UserRepository.h
src/services/: EmailNotifier.cpp  EmailNotifier.h  LoanService.cpp  LoanService.h  NotificationService.cpp  NotificationService.h  NotificationStrategy.h
src/tests/: AssetRepositoryTests.cpp  LoanServiceTests.cpp  NotificationServiceTests.cpp  SecurityTests.cpp  UserRepositoryTests.cpp
src/ui/: CLI.cpp  CLI.h  Context.cpp  Context.h
src/util/: Security.cpp  Security.h
